# nitrust-oxide

./: .gitignore  Cargo.toml  README.md
assets/shaders/: basic_shader.fs.glsl  basic_shader.vs.glsl
assets/textures/: board.dds  board_alpha.dds
src/: main.rs  todo.txt
src/framework/: mod.rs
src/framework/collision/: collider.rs  intersection.rs  mod.rs
src/framework/core/: camera.rs  clock.rs  mod.rs  transform.rs
src/framework/graphics/: mod.rs  shader.rs  texture.rs
src/framework/math/: mat4x4.rs  mod.rs  quaternion.rs  testvec.rs  vec3.rs  vec4.rs
tools/AMDCompress/CLI/: AMDCompressCLI.chm  png_to_dds_dxt1_bc1.bat  png_to_dds_dxt3_bc2.bat  png_to_dds_dxt5_bc3.bat
tools/AMDCompress/CLI/image_results/: foo.dds  foo2.dds
tools/AMDCompress/Libs/VS2010/x64/: AMDCompress_MD_DLL.lib  AMDCompress_MT_DLL.lib
tools/AMDCompress/Libs/VS2010/x86/: AMDCompress_MD_DLL.lib  AMDCompress_MT_DLL.lib
tools/AMDCompress/Libs/VS2012/x64/: AMDCompress_MD_DLL.lib  AMDCompress_MT_DLL.lib
tools/AMDCompress/Libs/VS2012/x86/: AMDCompress_MD_DLL.lib  AMDCompress_MT_DLL.lib
tools/AMDCompress/Libs/VS2013/x64/: AMDCompress_MT_DLL.lib
tools/AMDCompress/Libs/VS2013/x86/: AMDCompress_MD_DLL.lib  AMDCompress_MT_DLL.lib
