[package]
name = "nitrust-oxide"
version = "0.1.0"
authors = ["Wortelstoemp <tom.quareme@gmail.com>"]

[dependencies]
time = "*"
libc = "*"
gl = "0.3.0"
sdl2 = "*"

# [dependencies.sdl2]
# git = "https://github.com/AngryLawyer/rust-sdl2"

# [dependencies.gl]
# git = "https://github.com/bjz/gl-rs"


[[bin]]

name = "nitrust-oxide"
